--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Lista de Eventos</h1>
+  <header style="display:flex;align-items:center;justify-content:space-between;gap:12px;">
+    <h1>EcoEventos - Gestión de Eventos</h1>
+    <a href="create.html">
+      <button class="ver" style="padding:8px 14px;">Crear Evento</button>
+    </a>
+  </header>
+
+  <h2>Lista de Eventos</h2>
   <div id="eventos"></div>
 
   <!-- Tarjeta para mostrar detalle -->
-  <div id="detalleEvento">
+  <div id="detalleEvento" style="display:none;">
     <h2>Detalle del Evento</h2>
     <p><strong>Título:</strong> <span id="detTitulo"></span></p>
     <p><strong>Categoría:</strong> <span id="detCategoria"></span></p>
