--- a/frontend/create.html
+++ b/frontend/create.html
@@ -1,46 +1,89 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>EcoEventos - Crear Evento</title>
-  <link rel="stylesheet" href="styles.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <header style="display:flex;align-items:center;justify-content:space-between;gap:12px;">
-    <h1>Crear Evento</h1>
+
+  <header class="topbar">
+    <div class="container" style="padding:14px 20px;">
+      <div class="brand">
+        <span class="logo">🌿</span>
+        <span class="brand-name">EcoEventos</span>
+      </div>
+    </div>
   </header>
 
-  <section id="crear" class="card">
-    <h2>Detalles del evento</h2>
-    <form id="frmCrear">
-      <label>Título* <input type="text" name="titulo" required></label><br>
-      <label>Categoría*
-        <select name="categoria" required>
-          <option value="">Seleccione…</option>
-          <option>Minga</option>
-          <option>Sembratón</option>
-          <option>Charla</option>
-          <option>Taller</option>
-          <option>Reciclaje</option>
-          <option>Reforestación</option>
-          <option>Otro</option>
-        </select>
-      </label><br>
-      <label>Fecha* <input type="text" name="fecha" placeholder="15/08/2025" required></label><br>
-      <label>Hora inicio* <input type="text" name="hora_inicio" placeholder="08:00 AM" required></label><br>
-      <label>Hora fin* <input type="text" name="hora_fin" placeholder="12:00 PM" required></label><br>
-      <label>Lugar* <input type="text" name="lugar" required></label><br>
-      <label>Descripción* <textarea name="descripcion" required></textarea></label><br>
-
-      <div style="display:flex;gap:10px;flex-wrap:wrap;">
-        <button type="submit" class="ver">Guardar</button>
-        <button type="button" id="btnCancelar" class="cerrar" style="background: #e74c3c;">Cancelar</button>
+  <section class="hero" style="padding:28px 0;">
+    <div class="container hero-inner">
+      <div class="hero-text">
+        <h1>Crear Evento</h1>
+        <p>Completa los datos y registra una nueva actividad para tu comunidad.</p>
       </div>
-    </form>
-
-    <pre id="outCrear"></pre>
+    </div>
   </section>
+
+  <!-- Formulario dentro de tarjeta -->
+  <main class="container" style="padding:28px 0 40px;">
+    <section id="crear" class="card">
+      <h2 class="section-title">Detalles del evento</h2>
+
+      <form id="frmCrear">
+        <label>Título*
+          <input type="text" name="titulo" placeholder="Ej: Minga de limpieza" required>
+        </label>
+
+        <label>Categoría*
+          <select name="categoria" required>
+            <option value="">Seleccione…</option>
+            <option>Minga</option>
+            <option>Sembratón</option>
+            <option>Charla</option>
+            <option>Taller</option>
+            <option>Reciclaje</option>
+            <option>Reforestación</option>
+            <option>Otro</option>
+          </select>
+        </label>
+
+        <label>Fecha*
+          <input type="date" name="fecha" required>
+        </label>
+
+        <label>Hora inicio*
+          <input type="time" name="hora_inicio" step="60" required>
+        </label>
+
+        <label>Hora fin*
+          <input type="time" name="hora_fin" step="60" required>
+        </label>
+
+        <label>Lugar*
+          <input type="text" name="lugar" placeholder="Parque Central" required>
+        </label>
+
+        <label>Descripción*
+          <textarea name="descripcion" placeholder="Describe objetivo, actividades y puntos de encuentro..."
+            required></textarea>
+        </label>
+
+        <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:6px;">
+          <button type="submit" class="btn btn-primary">Guardar</button>
+          <button type="button" id="btnCancelar" class="btn btn-danger">Cancelar</button>
+        </div>
+      </form>
+
+      <pre id="outCrear"></pre>
+    </section>
+  </main>
 
   <script src="app.js"></script>
 </body>
+
 </html>
