--- a/frontend/create.html
+++ b/frontend/create.html
@@ -75,7 +75,7 @@
 
         <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:6px;">
           <button type="submit" class="btn btn-primary">Guardar</button>
-          <button type="button" id="btnCancelar" class="btn btn-danger">Cancelar</button>
+          <button type="button" id="btnCancelar" class="btn btn-danger" style="background-color:brown">Cancelar</button>
         </div>
       </form>
 
