--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
 
 
   <main class="container layout">
-    <!-- Filtros (no se cambia estructura ni IDs) -->
+    <!-- Filtros -->
     <section id="barraFiltros" class="filtros card">
       <h2 class="section-title">Filtros</h2>
 
@@ -80,7 +80,7 @@
     </section>
   </main>
 
-  <!-- Detalle (IDs intactos) -->
+  <!-- Detalle -->
   <section id="detalleEvento" class="card" style="display:none;">
     <h2 class="section-title">Detalle del Evento</h2>
     <p><strong>Título:</strong> <span id="detTitulo"></span></p>
